admin login systeme and redirecting to dashboard

--- a/app/views/blog/post.html.twig
+++ b/app/views/blog/post.html.twig
@@ -84,5 +84,5 @@
     <!-- Core theme JS-->
     <script src="../public/js/scripts.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="public/js/myJs.js"></script>
+    <script src="public/js/passwordShow.js"></script>
 {% endblock %}
