--- a/app/views/templates/layout.html.twig
+++ b/app/views/templates/layout.html.twig
@@ -92,11 +92,10 @@
         </footer>
         {% block JsLink %}
             <!-- Bootstrap core JS-->
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
             <!-- Core theme JS-->
-            <script src="public/js/scripts.js"></script>
+            <script src="public/js/boostrapBundleMinScripts.js"></script>
             <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-            <script src="public/js/myJs.js"></script>
+            <script src="public/js/passwordShow.js"></script>
         {% endblock %}
 
 </body>
