--- a/app/views/templates/adminLayout.html.twig
+++ b/app/views/templates/adminLayout.html.twig
@@ -9,7 +9,7 @@
     <meta name="author" content=""/>
     <title>Mon Blog</title>
     <link href="public/css/adminStyles.css" rel="stylesheet"/>
-    <link rel="icon" type="image/x-icon" href="public/assets/img/favicon.png"/>
+    <link rel="icon" type="image/x-icon" href="public/assets/img/logo.png"/>
     <script data-search-pseudo-elements="data-search-pseudo-elements" defer="defer" src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/js/all.min.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.29.0/feather.min.js" crossorigin="anonymous"></script>
   </head>
@@ -30,7 +30,7 @@
       <!-- * * Note: * * Visible only on and above the lg breakpoint-->
       <form class="form-inline me-auto d-none d-lg-block me-3">
         <div class="input-group input-group-joined input-group-solid">
-          <input class="form-control pe-0" type="search" placeholder="Search" aria-label="Search"/>
+          <input class="form-control pe-0" type="search" placeholder="Recherche" aria-label="Recherche"/>
           <div class="input-group-text">
             <i data-feather="search"></i>
           </div>
@@ -38,44 +38,6 @@
       </form>
       <!-- Navbar Items-->
       <ul class="navbar-nav align-items-center ms-auto">
-        <!-- Documentation Dropdown-->
-        <li class="nav-item dropdown no-caret d-none d-md-block me-3">
-          <a class="nav-link dropdown-toggle" id="navbarDropdownDocs" href="javascript:void(0);" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <div class="fw-500">Documentation</div>
-            <i class="fas fa-chevron-right dropdown-arrow"></i>
-          </a>
-          <div class="dropdown-menu dropdown-menu-end py-0 me-sm-n15 me-lg-0 o-hidden animated--fade-in-up" aria-labelledby="navbarDropdownDocs">
-            <a class="dropdown-item py-3" href="https://docs.startbootstrap.com/sb-admin-pro" target="_blank">
-              <div class="icon-stack bg-primary-soft text-primary me-4">
-                <i data-feather="book"></i>
-              </div>
-              <div>
-                <div class="small text-gray-500">Documentation</div>
-                Usage instructions and reference
-              </div>
-            </a>
-            <div class="dropdown-divider m-0"></div>
-            <a class="dropdown-item py-3" href="https://docs.startbootstrap.com/sb-admin-pro/components" target="_blank">
-              <div class="icon-stack bg-primary-soft text-primary me-4">
-                <i data-feather="code"></i>
-              </div>
-              <div>
-                <div class="small text-gray-500">Components</div>
-                Code snippets and reference
-              </div>
-            </a>
-            <div class="dropdown-divider m-0"></div>
-            <a class="dropdown-item py-3" href="https://docs.startbootstrap.com/sb-admin-pro/changelog" target="_blank">
-              <div class="icon-stack bg-primary-soft text-primary me-4">
-                <i data-feather="file-text"></i>
-              </div>
-              <div>
-                <div class="small text-gray-500">Changelog</div>
-                Updates and changes
-              </div>
-            </a>
-          </div>
-        </li>
         <!-- Navbar Search Dropdown-->
         <!-- * * Note: * * Visible only below the lg breakpoint-->
         <li class="nav-item dropdown no-caret me-3 d-lg-none">
@@ -86,7 +48,7 @@
           <div class="dropdown-menu dropdown-menu-end p-3 shadow animated--fade-in-up" aria-labelledby="searchDropdown">
             <form class="form-inline me-auto w-100">
               <div class="input-group input-group-joined input-group-solid">
-                <input class="form-control pe-0" type="text" placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2"/>
+                <input class="form-control pe-0" type="text" placeholder="Recherche" aria-label="Recherche" aria-describedby="basic-addon2"/>
                 <div class="input-group-text">
                   <i data-feather="search"></i>
                 </div>
@@ -102,7 +64,7 @@
           <div class="dropdown-menu dropdown-menu-end border-0 shadow animated--fade-in-up" aria-labelledby="navbarDropdownAlerts">
             <h6 class="dropdown-header dropdown-notifications-header">
               <i class="me-2" data-feather="bell"></i>
-              Alerts Center
+              Alerte commentaires
             </h6>
             <!-- Example Alert 1-->
             <a class="dropdown-item dropdown-notifications-item" href="#!">
@@ -159,7 +121,7 @@
             </h6>
             <!-- Example Message 1 -->
             <a class="dropdown-item dropdown-notifications-item" href="#!">
-              <img class="dropdown-notifications-item-img" src="assets/img/illustrations/profiles/profile-2.png"/>
+              <img class="dropdown-notifications-item-img" src="public/assets/img/illustrations/profiles/profile-2.png"/>
               <div class="dropdown-notifications-item-content">
                 <div class="dropdown-notifications-item-content-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
                 <div class="dropdown-notifications-item-content-details">Thomas Wilcox · 58m</div>
@@ -167,7 +129,7 @@
             </a>
             <!-- Example Message 2-->
             <a class="dropdown-item dropdown-notifications-item" href="#!">
-              <img class="dropdown-notifications-item-img" src="assets/img/illustrations/profiles/profile-3.png"/>
+              <img class="dropdown-notifications-item-img" src="public/assets/img/illustrations/profiles/profile-3.png"/>
               <div class="dropdown-notifications-item-content">
                 <div class="dropdown-notifications-item-content-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
                 <div class="dropdown-notifications-item-content-details">Emily Fowler · 2d</div>
@@ -175,7 +137,7 @@
             </a>
             <!-- Example Message 3-->
             <a class="dropdown-item dropdown-notifications-item" href="#!">
-              <img class="dropdown-notifications-item-img" src="assets/img/illustrations/profiles/profile-4.png"/>
+              <img class="dropdown-notifications-item-img" src="public/assets/img/illustrations/profiles/profile-4.png"/>
               <div class="dropdown-notifications-item-content">
                 <div class="dropdown-notifications-item-content-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
                 <div class="dropdown-notifications-item-content-details">Marshall Rosencrantz · 3d</div>
@@ -183,7 +145,7 @@
             </a>
             <!-- Example Message 4-->
             <a class="dropdown-item dropdown-notifications-item" href="#!">
-              <img class="dropdown-notifications-item-img" src="assets/img/illustrations/profiles/profile-5.png"/>
+              <img class="dropdown-notifications-item-img" src="public/assets/img/illustrations/profiles/profile-5.png"/>
               <div class="dropdown-notifications-item-content">
                 <div class="dropdown-notifications-item-content-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
                 <div class="dropdown-notifications-item-content-details">Colby Newton · 3d</div>
@@ -195,10 +157,10 @@
         </li>
         <!-- User Dropdown-->
         <li class="nav-item dropdown no-caret dropdown-user me-3 me-lg-4">
-          <a class="btn btn-icon btn-transparent-dark dropdown-toggle" id="navbarDropdownUserImage" href="javascript:void(0);" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img class="img-fluid" src="assets/img/illustrations/profiles/profile-1.png"/></a>
+          <a class="btn btn-icon btn-transparent-dark dropdown-toggle" id="navbarDropdownUserImage" href="javascript:void(0);" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img class="img-fluid" src="public/assets/img/illustrations/profiles/profile-1.png"/></a>
           <div class="dropdown-menu dropdown-menu-end border-0 shadow animated--fade-in-up" aria-labelledby="navbarDropdownUserImage">
             <h6 class="dropdown-header d-flex align-items-center">
-              <img class="dropdown-user-img" src="assets/img/illustrations/profiles/profile-1.png"/>
+              <img class="dropdown-user-img" src="public/assets/img/illustrations/profiles/profile-1.png"/>
               <div class="dropdown-user-details">
                 <div class="dropdown-user-details-name">Valerie Luna</div>
                 <div class="dropdown-user-details-email">vluna@aol.com</div>
@@ -565,20 +527,25 @@
                 </nav>
               </div>
               <!-- Sidenav Heading (Addons)-->
-              <div class="sidenav-menu-heading">Plugins</div>
+              <div class="sidenav-menu-heading">
+                Gestion des messages
+              </div>
               <!-- Sidenav Link (Charts)-->
               <a class="nav-link" href="charts.html">
                 <div class="nav-link-icon">
-                  <i data-feather="bar-chart"></i>
+                <i data-feather="mail"></i>
+                  {# <i data-feather="bar-chart"></i> #}
                 </div>
-                Charts
+                Contactes
               </a>
               <!-- Sidenav Link (Tables)-->
               <a class="nav-link" href="tables.html">
                 <div class="nav-link-icon">
-                  <i data-feather="filter"></i>
+                <i data-feather="message-square" class="ml-5"></i>
+
+                  {# <i data-feather="filter"></i> #}
                 </div>
-                Tables
+                Commentaires
               </a>
             </div>
           </div>
@@ -594,52 +561,45 @@
         </nav>
       </div>
       <div id="layoutSidenav_content">
-        {% block main %}
         <main>
-          {% block mainHeader %}
+        {% block mainContent %}
           <header class="page-header page-header-dark bg-gradient-primary-to-secondary pb-10">
-            <div class="container-xl px-4">
-              <div class="page-header-content pt-4">
-                <div class="row align-items-center justify-content-between">
-                  <div class="col-auto mt-4">
-                    <h1 class="page-header-title">
-                      <div class="page-header-icon">
-                        <i data-feather="layout"></i>
+            {% block mainHeader %}
+              <div class="container-xl px-4">
+                  <div class="page-header-content pt-4">
+                      <div class="row align-items-center justify-content-between">
+                          <div class="col-auto mt-4">
+                              <h1 class="page-header-title">
+                                  <div class="page-header-icon"><i data-feather="activity"></i></div>
+                                  Tableau de Bord
+                              </h1>
+                              <div class="page-header-subtitle">Administration du Blog</div>
+                          </div>
+                          <div class="col-12 col-xl-auto mt-4">
+                              <div class="input-group input-group-joined border-0" style="width: 16.5rem">
+                                  <span class="input-group-text"><i class="text-primary" data-feather="calendar"></i></span>
+                                  <input class="form-control ps-0 pointer" id="litepickerRangePlugin" placeholder="Select date range..." />
+                              </div>
+                          </div>
                       </div>
-                      Dark Sidenav
-                    </h1>
-                    <div class="page-header-subtitle">An alternate option for the sidenav styling</div>
                   </div>
-                </div>
               </div>
-            </div>
+            {% endblock %}
           </header>
-          {% endblock %}
           <!-- Main page content-->
-          {% block mainContent %}
-          <div class="container-xl px-4 mt-n10">
-            <div class="card">
-              <div class="card-header">Dark Sidenav Option</div>
-              <div class="card-body">
-                Use the
-                <code>.sidenav-dark</code>
-                with the
-                <code>.sidenav</code>
-                for a darker layout for the side navigation element. The text, icons, and all of the elements within the side navigation will adapt to work well with darker backgrounds. You can also use utility classes to modify the background color of the side navigation, or use a custom style!
-              </div>
-            </div>
-          </div>
+          {% block mainHeaderContainer %}
           {% endblock %}
-        </main>
+    
         {% endblock %}
+        </main>
         <footer class="footer-admin mt-auto footer-light">
           <div class="container-xl px-4">
             <div class="row">
               <div class="col-md-6 small">Copyright &copy; Adjoukou AGBELOU 2023</div>
               <div class="col-md-6 text-md-end small">
-                <a href="#!">Privacy Policy</a>
+                <a href="#!">Politique de Confidentialité</a>
                 &middot;
-                <a href="#!">Terms &amp; Conditions</a>
+                <a href="#!">Conditions générales</a>
               </div>
             </div>
           </div>
@@ -648,5 +608,11 @@
     </div>
     <script src="public/js/boostrapBundleMinScripts.js"></script>
     <script src="public/js/adminJs/adminScripts.js"></script>
-  </body>
+    <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js" crossorigin="anonymous"></script>
+    <script src="public/js/adminJs/datatables/datatables-simple-demo.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/litepicker/dist/bundle.js" crossorigin="anonymous"></script>
+    <script src="public/js/adminJs/litepicker.js"></script>
+</body>
 </html>
