--- a/app/views/admin/dashboard.html.twig
+++ b/app/views/admin/dashboard.html.twig
@@ -21,7 +21,7 @@
     </div>
   </div>
 {% endblock %} #}
-{% block mainHeaderContainer %}
+{% block mainPageContent %}
   <!-- Main page content-->
   <div class="container-xl px-4 mt-n10">
     <div class="row">
@@ -230,5 +230,4 @@
       </div>
     </div>
   </div>
-
 {% endblock %}
